<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Mem_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/secondView"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="000001"
            android:textStyle="bold"
            android:textSize="@dimen/_55sdp"
            />

        <TextView
            android:id="@+id/txt_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="NOW SERVING"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_28sdp"
            android:textStyle="bold" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="@dimen/_12sdp"
            tools:ignore="NewApi" />


    </LinearLayout>

    <View
        android:id="@+id/secondView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/secondView"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/note_member"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_13sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/_53sdp"
                android:layout_height="@dimen/_53sdp"
                android:layout_margin="@dimen/_4sdp"
                >

                <LinearLayout
                    android:id="@+id/ll_card_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cv_click"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_23sdp"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card_1_string"
                        android:textSize="@dimen/_6sdp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="@dimen/_53sdp"
                android:layout_height="@dimen/_53sdp"
                android:layout_margin="@dimen/_4sdp"
                >

                <LinearLayout
                    android:id="@+id/ll_card_2"
                    android:background="@drawable/cv_click"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_23sdp"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card_2_string"
                        android:textSize="@dimen/_6sdp"
                        android:textStyle="bold"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="@dimen/_53sdp"
                android:layout_height="@dimen/_53sdp"
                android:layout_margin="@dimen/_4sdp"
                >

                <LinearLayout
                    android:id="@+id/ll_card_3"
                    android:background="@drawable/cv_click"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_23sdp"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card_3_string"
                        android:textStyle="bold"
                        android:textSize="@dimen/_6sdp"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.CardView

                android:layout_width="@dimen/_53sdp"
                android:layout_height="@dimen/_53sdp"
                android:layout_margin="@dimen/_4sdp"
                >

                <LinearLayout
                    android:id="@+id/ll_card_4"
                    android:background="@drawable/cv_click"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_23sdp"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card_4_string"
                        android:textStyle="bold"
                        android:textSize="@dimen/_6sdp"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="@dimen/_53sdp"
                android:layout_height="@dimen/_53sdp"
                android:layout_margin="@dimen/_4sdp"
                >

                <LinearLayout
                    android:id="@+id/ll_card_5"
                    android:background="@drawable/cv_click"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_23sdp"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card_5_string"
                        android:textStyle="bold"
                        android:textSize="@dimen/_6sdp"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="@dimen/_53sdp"
                android:layout_height="@dimen/_53sdp"
                android:layout_margin="@dimen/_4sdp"
                >

                <LinearLayout
                    android:id="@+id/ll_card_6"
                    android:background="@drawable/cv_click"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_23sdp"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/card_6_string"
                        android:textStyle="bold"
                        android:textSize="@dimen/_6sdp"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>


</RelativeLayout>
